# whispercat-xb

./: .gitignore  INSTALLER-GUIDE.md  LARGE_AUDIO_CHUNKING_SPEC.md  MANUAL_PIPELINE_RUNNER_SPEC.md  README.md  RELEASE_NOTES.md  WhisperCat-Portable-README.txt  build-installer.ps1  build-windows-installer.bat  create-exe-launcher.bat  create-portable-exe.ps1  create-portable-package.bat  launch4j-config.xml  pom.xml  run-whispercat.bat
docs/: PIPELINE_OPTIMIZATION.md
src/main/java/org/whispercat/: AudioRecorderUI.java  ConfigManager.java  ConsoleLogger.java  GlobalHotkeyListener.java  MainForm.java  ToastNotification.java  TrayIconManager.java
src/main/java/org/whispercat/postprocessing/: Pipeline.java  PipelineEditorForm.java  PipelineListForm.java  PipelineUnitReference.java  PostProcessingForm.java  PostProcessingListForm.java  PostProcessingService.java  ProcessingStepData.java  ProcessingUnit.java  UnitEditorForm.java  UnitLibraryListForm.java
src/main/java/org/whispercat/recording/: AudioFileAnalyzer.java  ChunkedTranscriptionWorker.java  FfmpegChunker.java  FfmpegCompressor.java  HistoryPanel.java  LargeFileOptionsDialog.java  PipelineExecutionHistory.java  RecorderForm.java  SilenceRemover.java  WavChunker.java
src/main/java/org/whispercat/recording/clients/: OpenAITranscribeClient.java
src/main/java/org/whispercat/settings/: SettingsForm.java  ThresholdProgressBar.java
src/main/java/org/whispercat/sidemenu/: Menu.java  MenuAction.java  MenuAnimation.java
src/main/resources/: log4j2.xml
src/main/resources/theme/: FlatDarkLaf.properties
whispercat-rs/: Cargo.toml  IMPLEMENTATION.md  README.md  SPEC.md
whispercat-rs/src/: app.rs  autopaste.rs  error.rs  hotkey.rs  keyboard_recorder.rs  lib.rs  logger.rs  main.rs  notifications.rs  tray.rs
whispercat-rs/src/audio/: buffer.rs  compressor.rs  mod.rs  processor.rs  recorder.rs
whispercat-rs/src/config/: mod.rs
whispercat-rs/src/pipeline/: mod.rs
whispercat-rs/src/transcription/: client.rs  mod.rs  models.rs  types.rs  whisper.rs
whispercat-rs/src/ui/: mod.rs  unit_library.rs
whispercat-rs/tests/: config_tests.rs  logger_tests.rs  pipeline_tests.rs
